--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ relative_permalinks: true
 
 # Setup
 title:            Code Made In Denmark
-tagline:          'A danish programmer who does web-development and indie-game development'
-description:      'A danish programmer who loves to do web and game developmemt'
+tagline:          'A danish programmer who does web-development and other coding'
+description:      'A danish programmer who does web-development and other coding'
 url:              http://dasmikko.github.io
 baseurl:          /
 
