--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title:               rekNa\'s little corner
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               rekNa's little corner
+tagline:             'random tech stuff'
+description:         'Welcome to my little corner of the internet! I will blog about random projects, from web/app development to keyboard stuff'
 url:                 https://rekna.xyz
 baseurl:             ''
 paginate:            5
@@ -9,7 +9,7 @@ permalink:           pretty
 
 # About/contact
 author:
-  name:              Mikkel Holm Jensen
+  name:              rekNa
   url:               https://twitter.com/dasmikko
   email:             dasmikko@gmail.com
 
