--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ url:                 https://rekna.xyz
 baseurl:             ''
 paginate:            5
 permalink:           pretty
+theme: jekyll-theme-console
 remote_theme:        b2a3e8/jekyll-theme-console
 
 # About/contact
