--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ header_pages:
   - about.md
 
 style: dark # dark (default), light or hacker
-listen_for_clients_preferred_style: true # false (default) or true
+listen_for_clients_preferred_style: false # false (default) or true
 
 footer: 'follow us on <a href="https://twitter.com/xxx">twitter</a>'
 
