--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ remote_theme:        b2a3e8/jekyll-theme-console
 
 header_pages:
   - index.md
+  - 3dprint.md
   - about.md
 
 style: dark # dark (default), light or hacker
